--- a/src/component/Hero/hero.module.css
+++ b/src/component/Hero/hero.module.css
@@ -2,7 +2,7 @@
     background: linear-gradient(#6c5a3e47, #000000b3),
     url('../../images/main.jpeg') center/cover no-repeat;
     height: 90vh;
-    width: 100vw;
+    /* width: 100vw; */
     /* display: flex; */
     /* align-items: center; */
     /* justify-content: center; */
