--- a/src/App.css
+++ b/src/App.css
@@ -79,10 +79,15 @@ section{
 }
 
 /* Footer */
-footer{
+.footerSect{
   text-align: center;
   background-color: #6c5a3e;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding-top: 3rem;
 }
-.footer-page-link{
-  color: #fff;
+.footerSect p{
+  margin: 2rem 0 1rem 0;
+  color: #32323293;
 }
